# diplom

./: .env-sample  Dockerfile  README.md  data.json  docker-compose.yaml  pyproject.toml
config/: __init__.py  settings.py  urls.py
docs/: urls.py
employees/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
employees/migrations/: 0001_initial.py
tasks/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
tasks/migrations/: 0001_initial.py  0002_initial.py  0003_alter_task_employee_delete_employee.py  0004_alter_task_employee.py  0005_alter_task_parent.py
users/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_alter_user_options_alter_user_first_name_and_more.py
